tests/test55.rael.exp
Error [1:10]: Expected expression
| log 123, log
|          ^
